# Voronode

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.py  test_gemini.py  test_haiku.py
backend/: README.md
backend/agents/: README.md  __init__.py  compliance_auditor.py  executor_agent.py  extractor.py  orchestrator.py  planner_agent.py  responder_agent.py  state.py  upload_agent.py  validator.py  validator_agent.py
backend/api/: main.py  routes.py  schemas.py
backend/auth/: dependencies.py  user_store.py  utils.py
backend/core/: cache.py  circuit_breaker.py  config.py  db.py  logging.py  models.py  state.py
backend/graph/: client.py  schema.py
backend/ingestion/: README.md  budget_extractor.py  compliance_auditor.py  contract_extractor.py  extractor.py  validator.py
backend/memory/: __init__.py  conversation_store.py  mem0_client.py
backend/services/: __init__.py  graph_builder.py  llm_client.py  workflow_manager.py
backend/storage/: __init__.py  workflow_store.py
backend/tests/: conftest.py
backend/tools/: __init__.py  (+9 more)
docker/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
examples/: chat_stream_example.py  chat_stream_frontend.html  workflow_demo.py
frontend/: app.py
scripts/: generate_test_data.py  setup_chromadb.py  setup_neo4j.py
terraform/: .gitignore  .terraform.tfstate.lock.info  README.md  acr.tf  apps.tf  databases.tf  keyvault.tf  main.tf  monitoring.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
voronode_logging/: __init__.py  logger.py  middleware.py
(+92 files in other folders)
